--- a/beststore/src/main/resources/static/index.html
+++ b/beststore/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Bootstrap demo</title>
+    <title>Beast Strore</title>
   </head>
   <body>
     <div class="container">
